--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "author": "Herykson Gomes <heryksongomes@outlook.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
+  },
+  "scripts": {
+    "dev": "nodemon src/index.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
